# api/docs/swagger.yaml
@@ -1,5 +1,25 @@
 basePath: /
 definitions:
+  model.Comment:
+    properties:
+      content:
+        type: string
+      created_at:
+        type: string
+      id:
+        type: string
+      parent_id:
+        type: string
+      post_id:
+        type: string
+      user_id:
+        type: string
+    required:
+    - content
+    - id
+    - post_id
+    - user_id
+    type: object
   model.Post:
     properties:
       content:
@@ -18,6 +38,11 @@ definitions:
     - title
     - user_id
     type: object
+  model.User:
+    properties:
+      id:
+        type: string
+    type: object
   server.Error:
     properties:
       error: {}
@@ -33,6 +58,98 @@ info:
   title: Social Network API
   version: "0.1"
 paths:
+  /api/v1/auth/comment/create:
+    post:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/model.Comment'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/server.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/server.Error'
+      summary: Create comment
+      tags:
+      - comments
+  /api/v1/auth/comment/delete/{id}:
+    delete:
+      produces:
+      - application/json
+      responses:
+        "202":
+          description: Accepted
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/server.Error'
+      summary: Delete comment
+      tags:
+      - comments
+  /api/v1/auth/follow/{id}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Target user ID to follow
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/server.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/server.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/server.Error'
+      summary: Follow a user
+      tags:
+      - follow
+  /api/v1/auth/follow/request/{id}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Target user ID to request follow
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/server.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/server.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/server.Error'
+      summary: Request a follow for user
+      tags:
+      - follow
   /api/v1/auth/posts/{id}:
     get:
       produces:
@@ -85,63 +202,7 @@ paths:
       summary: Delete post
       tags:
       - posts
-  /api/v1/follow/{id}:
-    get:
-      consumes:
-      - application/json
-      parameters:
-      - description: Target user ID to follow
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/server.Response'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/server.Error'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/server.Error'
-      summary: Follow a user
-      tags:
-      - follow
-  /api/v1/follow/request/{id}:
-    get:
-      consumes:
-      - application/json
-      parameters:
-      - description: Target user ID to request follow
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/server.Response'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/server.Error'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/server.Error'
-      summary: Request a follow for user
-      tags:
-      - follow
-  /api/v1/unfollow/{id}:
+  /api/v1/auth/unfollow/{id}:
     get:
       consumes:
       - application/json
@@ -169,18 +230,64 @@ paths:
       summary: Unfollow a user
       tags:
       - follow
-  /users/create:
+  /api/v1/auth/user/create/{privacy_state}:
     get:
-      consumes:
-      - application/json
+      parameters:
+      - description: Only public, private, selected allowed
+        in: path
+        name: privacy_state
+        required: true
+        type: string
       produces:
       - application/json
       responses:
         "201":
-          description: ok
+          description: Created
           schema:
-            type: string
-      summary: Sign up
+            $ref: '#/definitions/model.User'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/server.Error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/server.Error'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/server.Error'
+      summary: Create a user with privacy state
+      tags:
+      - users
+  /api/v1/auth/user/privacy/{privacy_state}:
+    get:
+      parameters:
+      - description: Only public, private, selected allowed
+        in: path
+        name: privacy_state
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.User'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/server.Error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/server.Error'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/server.Error'
+      summary: Updates user's privacy
       tags:
       - users
 swagger: "2.0"
