# api/internal/model/post.go
@@ -11,12 +11,14 @@ type Post struct {
 	Title     string    `db:"title" json:"title" validate:"required"`
 	Content   string    `db:"content" json:"content" validate:"required"`
 	CreatedAt time.Time `db:"created_at" json:"created_at"`
+	Privacy   string    `json:"privacy" validate:"required|privacy:private,public"`
 }
 
 // NewPost creates a pointer to Post struct with new uuid
 func NewPost() *Post {
 	id := uuid.New().String()
 	return &Post{
-		ID: id,
+		ID:        id,
+		CreatedAt: time.Now(),
 	}
 }
